# Orange_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env   local.docker-compose.yaml  pyproject.toml  requirements.txt  run.py
bot/: ap_shedule.py  config.py  core.py  example.env  git_api.py  handlers.py  keyboards.py  middleware.py  models.py
utils/: ai.py  ap_shedule.py  exceptions.py  git_api.py  http_client.py  markdown.py  translator.py
